kubernetes-networks/canary/02-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
  namespace: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary  
  template:
    metadata:
      name: canary
      labels:
        app: canary
    spec:
      containers:
      - name: canary
        image: mirrorgooglecontainers/echoserver:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: canary
  namespace: canary
spec:
  selector:
    app: canary
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
