kubernetes-networks/canary/02-stable-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web  
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: mirrorgooglecontainers/echoserver:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: canary
spec:
  selector:
    app: web
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
