kubernetes-networks/canary/03-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: stable
  namespace: canary
  annotations:           
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  rules:
    - http:
        paths:
          - path: /canary
            backend:
              serviceName: web
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: canary
  namespace: canary
  annotations:           
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
    - http:
        paths:
          - path: /canary
            backend:
              serviceName: canary
              servicePort: 80
